# typhoon

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  deploy-crates.sh
benches/program-bench/: Cargo.toml
benches/program-bench/benches/: bench.rs
benches/program-bench/benches/programs/: Cargo.toml
benches/program-bench/benches/programs/anchor/: Cargo.toml
benches/program-bench/benches/programs/pinocchio/: Cargo.toml
benches/program-bench/src/: lib.rs
crates/account-macro/: Cargo.toml
crates/account-macro/src/: keys.rs  lib.rs
crates/account-macro/tests/account_attribute/: enum.fail.rs  enum.fail.stderr  struct.pass.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: discriminator.rs  internal.rs  lib.rs  programs.rs  readable.rs  utils.rs
crates/accounts/src/accounts/: account.rs  borsh.rs  interface.rs  interface_account.rs  mod.rs  mutable.rs  option.rs  program.rs  signer.rs  system.rs  unchecked.rs
crates/context/: Cargo.toml
crates/context-macro/: Cargo.toml
crates/context-macro/src/: accounts.rs  arguments.rs  bumps.rs  constraints.rs  context.rs  cross_checks.rs  lib.rs  lifetime.rs  sorter.rs  visitor.rs
crates/context-macro/src/constraints/: associated_token.rs  bump.rs  has_one.rs  init.rs  init_if_needed.rs  keys.rs  mod.rs  payer.rs  program.rs  seeded.rs  seeds.rs  space.rs  token.rs
crates/context-macro/src/extractor/: account.rs  inner_ty.rs  mod.rs
crates/context-macro/src/generators/: account.rs  arguments.rs  assign.rs  bumps.rs  global_context.rs  has_one.rs  init.rs  mod.rs  rent.rs  state.rs  token.rs
crates/context-macro/src/injector/: field.rs  lifetime.rs  mod.rs
crates/context-macro/src/remover/: attribute.rs
crates/context-macro/tests/: test.rs
crates/context-macro/tests/constraints/: init.pass.rs  init_seeds_keys.fail.rs  init_seeds_keys.fail.stderr  invalid_seeds_syntax.fail.rs  invalid_seeds_syntax.fail.stderr  invalid_token_variant.fail.rs  invalid_token_variant.fail.stderr  missing_associated_token_pogram.fail.rs  missing_associated_token_pogram.fail.stderr  missing_system_program.fail.rs  missing_system_program.fail.stderr  missing_token_pogram.fail.rs  missing_token_pogram.fail.stderr  seeds_keys.fail.rs  seeds_keys.fail.stderr
crates/context/src/: args.rs  array.rs  lib.rs  program_id.rs  remaining_accounts.rs
crates/context/src/args/: borsh.rs  bytemuck.rs  mod.rs
crates/cpi-generator/: Cargo.toml
crates/cpi-generator-macro/: Cargo.toml
crates/cpi-generator-macro/src/: lib.rs
crates/cpi-generator/src/anchor/: account.rs  doc.rs  idl.rs  instruction.rs  mod.rs  program_id.rs  type.rs
crates/discriminator-macro/: Cargo.toml
crates/discriminator-macro/src/: lib.rs
crates/discriminator-macro/tests/discriminator-function/: basic.pass.rs
crates/errors/: Cargo.toml
crates/errors-macro/: Cargo.toml
crates/errors-macro/src/: lib.rs
crates/errors/src/: default_custom.rs  error_code.rs  extension.rs  lib.rs
crates/handler-macro/: Cargo.toml
crates/handler-macro/src/: lib.rs
crates/idl-generator/: Cargo.toml
crates/idl-generator/src/: doc.rs  lib.rs  main.rs  plugin.rs
crates/idl-generator/src/helpers/: attributes.rs  item.rs  mod.rs
crates/idl-generator/src/visitors/: apply_instruction_visitor.rs  cache_by_impls_visitor.rs  cache_instruction_idents.rs  context_visitor.rs  double_visitor.rs  instruction_visitor.rs  mod.rs  program_visitor.rs  set_account_visitor.rs  set_defined_types.rs  set_errors_visitor.rs  set_program_id_visitor.rs  set_type_visitor.rs
crates/instruction-builder/: Cargo.toml  build.rs
crates/instruction-builder/src/: instruction.rs  lib.rs  mod_path.rs  resolver.rs
crates/instruction-builder/src/generator/: client.rs  cpi.rs  mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/metadata-extractor/: Cargo.toml
crates/metadata-extractor/src/: doc.rs  lib.rs  main.rs  parsing.rs
crates/metadata-extractor/src/instruction/: account.rs
crates/program/: Cargo.toml
crates/program/src/: bytes.rs  lib.rs  pinocchio.rs  vanilla.rs
crates/program/src/vanilla/: invoke.rs  mod.rs  syscall.rs
crates/space-macro/: Cargo.toml
crates/space-macro/src/: arg.rs  lib.rs  value.rs
crates/syn/: Cargo.toml
crates/syn/src/: account.rs  account_meta.rs  accounts.rs  arguments.rs  constraints.rs  context.rs  data.rs  doc.rs  errors.rs  instruction.rs  lib.rs  macros.rs
crates/syn/src/constraints/: has_one.rs  init.rs  mint.rs  mod.rs  payer.rs  program.rs  seeded.rs  seeds.rs  token.rs
crates/syn/src/helpers/: path.rs
crates/syn/src/utils/: expr.rs  mod.rs  seeds_expr.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/token/src/traits/: create.rs  create_account.rs  create_mint.rs  mod.rs
crates/traits/: Cargo.toml
crates/traits/src/: lamport.rs  lib.rs  system.rs
crates/utility/: Cargo.toml
crates/utility-traits/: Cargo.toml
crates/utility-traits/src/: checks_ext.rs  close.rs  create.rs  lamport.rs  lib.rs  system.rs
crates/utility/src/: bytes.rs  create_account.rs  lib.rs
crates/utility/src/bytes/: borsh.rs  mod.rs  writer.rs
examples/counter/: Cargo.toml  build.rs
examples/counter/src/: lib.rs
examples/counter/tests/: integration.rs
examples/cpi/: Cargo.toml  Makefile.toml
examples/cpi/interfaces/hand/: Cargo.toml
examples/cpi/interfaces/lever/: Cargo.toml
examples/cpi/programs/hand/: Cargo.toml
examples/cpi/programs/lever/: Cargo.toml
examples/cpi/tests/integration/: Cargo.toml
examples/escrow/: Cargo.toml
examples/escrow/interfaces/escrow/: Cargo.toml
examples/escrow/programs/escrow/: Cargo.toml  build.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/hello-world/tests/: integration.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: lib.rs
examples/hello_world/tests/: integration.rs
examples/instruction-data/: Cargo.toml
examples/instruction-data/src/: lib.rs
examples/instruction-data/tests/: integration.rs
examples/seeded/: Cargo.toml
examples/seeded/src/: lib.rs
examples/seeded/tests/: integration.rs
(+73 files in other folders)
