[workspace]
members = ["crates/*"]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.9"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aursen"]
repository = "https://github.com/rust-lang/rust-analyzer"

[workspace.dependencies]
anchor-lang-idl-spec = "0.1.0"
borsh = { version = "1.5", default-features = false }
bytemuck = "1.21.0"
cargo-manifest = "0.19.1"
five8_const = "0.1.4"
codama = "0.3"
codama-attributes = "0.3"
codama-nodes = "0.3"
codama-koroks = "0.3"
codama-korok-plugins = "0.3"
codama-korok-visitors = "0.3"
codama-stores = "0.3"
codama-syn-helpers = "0.3"
trybuild = "1.0"
typhoon = { version = "0.1.0-alpha.9", path = "crates/lib" }
typhoon-accounts = { version = "0.1.0-alpha.9", path = "crates/accounts" }
typhoon-account-macro = { version = "0.1.0-alpha.9", path = "crates/account-macro" }
typhoon-context = { version = "0.1.0-alpha.9", path = "crates/context" }
typhoon-context-macro = { version = "0.1.0-alpha.9", path = "crates/context-macro" }
typhoon-cpi-generator = { version = "0.1.0-alpha.9", path = "crates/cpi-generator" }
typhoon-cpi-generator-macro = { version = "0.1.0-alpha.9", path = "crates/cpi-generator-macro" }
typhoon-discriminator = { version = "0.1.0-alpha.9", path = "crates/discriminator" }
typhoon-discriminator-macro = { version = "0.1.0-alpha.9", path = "crates/discriminator-macro" }
typhoon-errors = { version = "0.1.0-alpha.9", path = "crates/errors" }
typhoon-handler-macro = { version = "0.1.0-alpha.9", path = "crates/handler-macro" }
typhoon-idl-generator = { version = "0.1.0-alpha.9", path = "crates/idl-generator" }
typhoon-metadata-extractor = { version = "0.1.0-alpha.9", path = "crates/metadata-extractor" }
typhoon-program-id-macro = { version = "0.1.0-alpha.9", path = "crates/program-id-macro" }
typhoon-token = { version = "0.1.0-alpha.9", path = "crates/token" }
typhoon-utility = { version = "0.1.0-alpha.9", path = "crates/utility" }
typhoon-utility-traits = { version = "0.1.0-alpha.9", path = "crates/utility-traits" }
heck = "0.5.0"
paste = "1.0"
pinocchio = "0.8.4"
pinocchio-associated-token-account = "0.1.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-token = "0.3.0"
pinocchio-system = "0.2.3"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
syn = "2.0"
