[workspace]
members = ["crates/*"]
exclude = ["examples"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.10"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aursen"]
repository = "https://github.com/rust-lang/rust-analyzer"

[workspace.dependencies]
anchor-lang-idl-spec = "0.1"
borsh = { version = "1.5", default-features = false }
bytemuck = "1.23"
cargo-manifest = "0.19"
five8_const = "0.1"
cargo_metadata = "0.19.2"
codama = "0.4"
codama-attributes = "0.4"
codama-nodes = "0.4"
codama-koroks = "0.4"
codama-korok-plugins = "0.4"
codama-korok-visitors = "0.4"
codama-stores = "0.4"
codama-syn-helpers = "0.4"
trybuild = "1.0"
typhoon = { version = "0.1.0-alpha.10", path = "crates/lib" }
typhoon-accounts = { version = "0.1.0-alpha.10", path = "crates/accounts" }
typhoon-account-macro = { version = "0.1.0-alpha.10", path = "crates/account-macro" }
typhoon-context = { version = "0.1.0-alpha.10", path = "crates/context" }
typhoon-context-macro = { version = "0.1.0-alpha.10", path = "crates/context-macro" }
typhoon-cpi-generator = { version = "0.1.0-alpha.10", path = "crates/cpi-generator" }
typhoon-cpi-generator-macro = { version = "0.1.0-alpha.10", path = "crates/cpi-generator-macro" }
typhoon-discriminator = { version = "0.1.0-alpha.10", path = "crates/discriminator" }
typhoon-discriminator-macro = { version = "0.1.0-alpha.10", path = "crates/discriminator-macro" }
typhoon-errors = { version = "0.1.0-alpha.10", path = "crates/errors" }
typhoon-handler-macro = { version = "0.1.0-alpha.10", path = "crates/handler-macro" }
typhoon-idl-generator = { version = "0.1.0-alpha.10", path = "crates/idl-generator" }
typhoon-instruction-builder = { version = "0.1.0-alpha.10", path = "crates/instruction-builder" }
typhoon-program-id-macro = { version = "0.1.0-alpha.10", path = "crates/program-id-macro" }
typhoon-token = { version = "0.1.0-alpha.10", path = "crates/token" }
typhoon-utility = { version = "0.1.0-alpha.10", path = "crates/utility" }
typhoon-utility-traits = { version = "0.1.0-alpha.10", path = "crates/utility-traits" }
typhoon-syn = { version = "0.1.0-alpha.10", path = "crates/syn" }
heck = "0.5"
paste = "1.0"
pinocchio = "0.8.4"
pinocchio-associated-token-account = "0.1.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-token = "0.3.0"
pinocchio-system = "0.2.3"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
sha2 = "0.10"
syn = "2.0"
