[package]
name = "program-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bench]]
name = "bench"
harness = false

[dependencies]
sha2 = "0.10"
litesvm = "0.7"
serde = "1.0"
solana-account = "2.2"
solana-hash = "2.3"
solana-instruction = "2.3"
solana-keypair = "2.2"
solana-native-token = "2.3"
solana-pubkey = "2.3"
solana-signer = "2.2"
solana-system-interface = "1.0.0"
solana-transaction = "2.2"

[dev-dependencies]
serde_json = "1.0"
