[package]
name = "typhoon-account-macro"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
trybuild.workspace = true
typhoon = { workspace = true, features = ["pinocchio"] }
zerocopy = { workspace = true, features = ["derive"] }
