[package]
name = "typhoon-account-macro"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
typhoon-discriminator.workspace = true

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive"] }
pinocchio.workspace = true
trybuild.workspace = true
typhoon-accounts.workspace = true
