[package]
name = "typhoon-accounts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aligned.workspace = true
bytemuck.workspace = true
typhoon-errors.workspace = true
typhoon-program.workspace = true
