[package]
name = "typhoon-accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
typhoon-errors.workspace = true
pinocchio.workspace = true
pinocchio-system.workspace = true
