[package]
name = "typhoon-context-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["visit", "visit-mut", "full"] }
quote.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive"] }
trybuild.workspace = true
typhoon.workspace = true
typhoon-token.workspace = true
