[package]
name = "typhoon-context-macro"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["visit", "visit-mut", "full"] }
quote.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive"] }
pinocchio-pubkey.workspace = true
trybuild.workspace = true
typhoon-account-macro.workspace = true
typhoon-accounts.workspace = true
typhoon-context.workspace = true
typhoon-errors.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-utility-traits.workspace = true
