[package]
name = "typhoon-context"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aligned.workspace = true
bytemuck.workspace = true
typhoon-program.workspace = true
paste.workspace = true
