[package]
name = "typhoon-context"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
paste.workspace = true
pinocchio.workspace = true
typhoon-errors.workspace = true
