[package]
name = "typhoon-cpi-generator-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
anchor-lang-idl-spec.workspace = true
typhoon-cpi-generator.workspace = true
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
