[package]
name = "typhoon-cpi-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anchor-lang-idl-spec.workspace = true
five8_const.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
