[package]
name = "typhoon-discriminator-macro"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
typhoon-discriminator.workspace = true

[dev-dependencies]
trybuild.workspace = true
