[package]
name = "typhoon-errors"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
pinocchio = ["typhoon-program/pinocchio"]

[dependencies]
typhoon-program.workspace = true
thiserror.workspace = true
num-traits.workspace = true
