[package]
name = "typhoon-errors"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pinocchio.workspace = true
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true
