[package]
name = "typhoon-idl-generator"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
codama.workspace = true
codama-attributes.workspace = true
codama-nodes.workspace = true
codama-koroks.workspace = true
codama-korok-plugins.workspace = true
codama-korok-visitors.workspace = true
codama-stores.workspace = true
codama-syn-helpers.workspace = true
five8_const.workspace = true
hashbrown.workspace = true
typhoon-discriminator.workspace = true
typhoon-syn.workspace = true
syn = { workspace = true, features = ["full", "visit"] }

[dev-dependencies]
quote.workspace = true
