[package]
name = "typhoon-instruction-builder"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
cargo_metadata.workspace = true
syn = { workspace = true, features = ["full", "visit"] }
proc-macro2.workspace = true
quote.workspace = true
typhoon-syn.workspace = true
