[package]
name = "typhoon-instruction-builder"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
cargo-manifest.workspace = true
hashbrown.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit"] }
typhoon-syn.workspace = true
