[package]
name = "typhoon"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
borsh = [
    "typhoon-accounts/borsh",
    "typhoon-utility/borsh",
    "typhoon-context/borsh",
]
std = ["pinocchio/std"]

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
typhoon-accounts.workspace = true
typhoon-account-macro.workspace = true
typhoon-errors.workspace = true
typhoon-context.workspace = true
typhoon-context-macro.workspace = true
typhoon-cpi-generator-macro.workspace = true
typhoon-handler-macro.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-utility.workspace = true
typhoon-utility-traits.workspace = true
