[package]
name = "typhoon-program"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["solana-nostd-entrypoint", "nostd-system-program"]
pinocchio = ["dep:pinocchio", "pinocchio-system", "pinocchio-pubkey"]

[dependencies]
aligned.workspace = true
nostd-system-program = { workspace = true, optional = true }
pinocchio = { workspace = true, optional = true }
pinocchio-pubkey = { workspace = true, optional = true }
pinocchio-system = { workspace = true, optional = true }
solana-nostd-entrypoint = { workspace = true, optional = true }
