[package]
name = "typhoon-program"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = [
    "solana-nostd-entrypoint",
    "nostd-system-program",
    "solana-program-entrypoint",
    "solana-program-error",
    "solana-pubkey",
    "solana-msg",
    "solana-sysvar-id",
    "solana-clock",
    "solana-rent",
    "solana-define-syscall",
]
pinocchio = [
    "dep:pinocchio",
    "pinocchio-system",
    "pinocchio-pubkey",
    "pinocchio-log",
]

[dependencies]
nostd-system-program = { workspace = true, optional = true }
pinocchio = { workspace = true, optional = true }
pinocchio-log = { workspace = true, optional = true }
pinocchio-pubkey = { workspace = true, optional = true }
pinocchio-system = { workspace = true, optional = true }
solana-clock = { workspace = true, optional = true }
solana-define-syscall = { workspace = true, optional = true }
solana-msg = { workspace = true, optional = true }
solana-nostd-entrypoint = { workspace = true, optional = true }
solana-program-entrypoint = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true, features = ["bytemuck"] }
solana-rent = { workspace = true, optional = true }
solana-sysvar-id = { workspace = true, optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-pubkey = { workspace = true, optional = true, features = ["curve25519"] }
pinocchio = { workspace = true, optional = true, features = ["std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
