[package]
name = "typhoon-syn"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
heck.workspace = true
syn = { workspace = true, features = ["visit", "full"] }
quote.workspace = true
proc-macro2.workspace = true
