[package]
name = "typhoon-token"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
pinocchio.workspace = true
pinocchio-token = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
typhoon-utility.workspace = true
