[package]
name = "crayfish-traits"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
crayfish-accounts.workspace = true
crayfish-program.workspace = true
