[package]
name = "typhoon-traits"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
typhoon-accounts.workspace = true
typhoon-program.workspace = true
