[package]
name = "typhoon-utility-traits"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
pinocchio = [
    "typhoon-program/pinocchio",
    "typhoon-accounts/pinocchio",
    "typhoon-utility/pinocchio",
]

[dependencies]
typhoon-accounts.workspace = true
typhoon-program.workspace = true
typhoon-utility.workspace = true
