[package]
name = "typhoon-utility-traits"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pinocchio.workspace = true
pinocchio-system.workspace = true
typhoon-accounts.workspace = true
typhoon-utility.workspace = true
