[package]
name = "typhoon-utility"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pinocchio.workspace = true
pinocchio-system.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
