[package]
name = "counter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
crayfish-accounts.workspace = true
crayfish-account-macro.workspace = true
crayfish-context.workspace = true
crayfish-context-macro.workspace = true
crayfish-handler-macro.workspace = true
crayfish-program = { workspace = true, features = ["pinocchio"] }
crayfish-program-id-macro.workspace = true
crayfish-space.workspace = true
crayfish-traits.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
