[package]
name = "counter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "typhoon/pinocchio"]

[dependencies]
bytemuck.workspace = true
pinocchio = { workspace = true, optional = true }
solana-nostd-entrypoint = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }
typhoon.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
