[workspace]
members = ["programs/*", "interfaces/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.23"
escrow-interface = { path = "interfaces/escrow" }
litesvm = "0.8"
typhoon = { path = "../../crates/lib" }
typhoon-token = { path = "../../crates/token" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }
typhoon-idl-generator = { path = "../../crates/idl-generator" }
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-native-token = "3.0"
solana-signer = "3.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.0"

[profile.release]
lto = true
codegen-units = 1
