[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "typhoon/pinocchio"]

[dependencies]
pinocchio = { git = "https://github.com/febo/pinocchio", optional = true }
solana-nostd-entrypoint = { git = "https://github.com/cavemanloverboy/solana-nostd-entrypoint", rev = "b752d70", optional = true }
solana-program = { version = "2.1", optional = true }
typhoon = { path = "../../crates/lib" }

[dev-dependencies]
litesvm = { git = "https://github.com/LiteSVM/litesvm", rev = "7c32a00" }
solana-sdk = "2.1.10"
