[package]
name = "instruction-data"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "crayfish-program/pinocchio"]

[dependencies]
bytemuck.workspace = true
crayfish-accounts.workspace = true
crayfish-account-macro.workspace = true
crayfish-context.workspace = true
crayfish-context-macro.workspace = true
crayfish-handler-macro.workspace = true
crayfish-program = { workspace = true, features = ["pinocchio"] }
crayfish-program-id-macro.workspace = true
crayfish-space.workspace = true
crayfish-traits.workspace = true
pinocchio = { workspace = true, optional = true }
solana-nostd-entrypoint = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
